fix mobile spacing

--- a/templates/aguilus/css/cardio.css
+++ b/templates/aguilus/css/cardio.css
@@ -474,8 +474,13 @@ section {
 	}
 }
 
+.about {
+	margin: 40px 0;
+}
+
 .services {
 	margin: 40px 0;
+	padding-bottom: 50px;
 }
 .services li {
 	color: #fff;
@@ -483,7 +488,6 @@ section {
 
 .service {
 	width: 100%;
-	height: 320px;
 	margin: 40px 0;
 	text-align: center;
 	border: 1px solid #ddd;
@@ -1063,6 +1067,10 @@ footer .social-footer li:hover a {
 	margin-top: 150px;
 }
 
+.about {
+	padding-bottom: 100px;
+}
+
 @media(max-width:992px) {
 	h1 {
 		font-size: 36px;
@@ -1096,6 +1104,14 @@ footer .social-footer li:hover a {
 }
 
 @media(max-width: 768px) {
+
+	.container {
+		padding: 40px;
+	}
+
+	nav .container {
+		padding: 0 40px;
+	}
 	.pricing {
 		margin-bottom: 30px;
 	}
